--- a/Atividade_Funcoes_e_manipulacao_de_arquivos_Semana_05.ipynb
+++ b/Atividade_Funcoes_e_manipulacao_de_arquivos_Semana_05.ipynb
@@ -250,12 +250,81 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "def cria_tabuleiro():\n",
+        "    tabuleiro = [[0] * 20 for _ in range(20)]\n",
+        "\n",
+        "    navios_colocados = 0\n",
+        "    while navios_colocados < 20:\n",
+        "        x, y = random.randint(0, 19), random.randint(0, 19)\n",
+        "        if tabuleiro[x][y] == 0:\n",
+        "            tabuleiro[x][y] = 1\n",
+        "            navios_colocados += 1\n",
+        "\n",
+        "    return tabuleiro\n",
+        "\n",
+        "def verifica_tiro(tabuleiro, x, y):\n",
+        "    if tabuleiro[x][y] == 1:\n",
+        "        return \"Acertou um navio!\"\n",
+        "    else:\n",
+        "        return \"Água.\"\n",
+        "\n",
+        "def main():\n",
+        "    tabuleiro = cria_tabuleiro()\n",
+        "    tentativas = 5\n",
+        "\n",
+        "    while tentativas > 0:\n",
+        "        try:\n",
+        "            x = int(input(\"Digite a coordenada X (0 a 19): \"))\n",
+        "            y = int(input(\"Digite a coordenada Y (0 a 19): \"))\n",
+        "\n",
+        "            if 0 <= x < 20 and 0 <= y < 20:\n",
+        "                resultado = verifica_tiro(tabuleiro, x, y)\n",
+        "                print(resultado)\n",
+        "            else:\n",
+        "                print(\"Coordenadas fora do intervalo válido.\")\n",
+        "        except ValueError:\n",
+        "            print(\"Digite valores numéricos válidos.\")\n",
+        "\n",
+        "        tentativas -= 1\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
       "metadata": {
-        "id": "BhHWwg54-H1j"
+        "id": "BhHWwg54-H1j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "1b62e16f-5ba9-40bc-eed2-11e5a63cc3fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a coordenada X (0 a 19): 1\n",
+            "Digite a coordenada Y (0 a 19): 2\n",
+            "Água.\n",
+            "Digite a coordenada X (0 a 19): 3\n",
+            "Digite a coordenada Y (0 a 19): 4\n",
+            "Água.\n",
+            "Digite a coordenada X (0 a 19): 1\n",
+            "Digite a coordenada Y (0 a 19): 2\n",
+            "Água.\n",
+            "Digite a coordenada X (0 a 19): 6\n",
+            "Digite a coordenada Y (0 a 19): 19\n",
+            "Água.\n",
+            "Digite a coordenada X (0 a 19): 36\n",
+            "Digite a coordenada Y (0 a 19): 21\n",
+            "Coordenadas fora do intervalo válido.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -273,12 +342,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def estatisticas(acertos_agua, acertos_navios):\n",
+        "    total_tentativas = acertos_agua + acertos_navios\n",
+        "    porcentagem_agua = (acertos_agua / total_tentativas) * 100\n",
+        "    porcentagem_navios = (acertos_navios / total_tentativas) * 100\n",
+        "\n",
+        "    return porcentagem_agua, porcentagem_navios\n",
+        "\n",
+        "# simulação. só trocar pelas variáveis.\n",
+        "acertos_agua = 10\n",
+        "acertos_navios = 15\n",
+        "\n",
+        "porcentagem_agua, porcentagem_navios = estatisticas(acertos_agua, acertos_navios)\n",
+        "print(f\"Acertos em água: {acertos_agua}\")\n",
+        "print(f\"Acertos em navios: {acertos_navios}\")\n",
+        "print(f\"Porcentagem de acertos em água: {porcentagem_agua:.2f}%\")\n",
+        "print(f\"Porcentagem de acertos em navios: {porcentagem_navios:.2f}%\")\n"
+      ],
       "metadata": {
-        "id": "N5itlDvd_Hbi"
+        "id": "N5itlDvd_Hbi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4b461f1-6173-4c3f-b7f2-e5f3ae895b8b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Acertos em água: 10\n",
+            "Acertos em navios: 15\n",
+            "Porcentagem de acertos em água: 40.00%\n",
+            "Porcentagem de acertos em navios: 60.00%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1150,7 +1251,7 @@
         "id": "KDBgag6i4VlI",
         "outputId": "87717eb3-b2d1-4ac6-d000-132308304261"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1502,7 +1603,7 @@
         },
         "outputId": "34ef678d-9800-46f2-87cd-0ea107a5a34b"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1543,7 +1644,7 @@
         "id": "j-kx8CrD61B7",
         "outputId": "09f629b7-e087-48a2-ad54-03df33876702"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1583,7 +1684,7 @@
         },
         "outputId": "c3ee0797-2485-47bf-dd78-61903ea800d6"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1877,7 +1978,7 @@
         "id": "X9WxdL9X9j_a",
         "outputId": "7d0636e9-2c34-43f5-dc6a-3e0a52aaa56a"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2169,7 +2270,7 @@
         "id": "O_35Jq_j9zpe",
         "outputId": "93140e14-7268-4f99-8719-1a024bf44883"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2205,7 +2306,7 @@
         "id": "rVEyf0jl-lzv",
         "outputId": "d50f6b2f-395a-4806-afea-f464f34f3a49"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2519,7 +2620,7 @@
         },
         "outputId": "3bf383b5-1fc4-4ea1-bb1d-5e6af3e42af2"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2910,7 +3011,7 @@
         },
         "outputId": "6c50f82d-8e9a-4884-c946-fcc1062921cc"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3222,7 +3323,7 @@
         "id": "PDrN6np_AmeE",
         "outputId": "e1c886bf-2e0c-4031-bca6-a01a2839e8f0"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
